import {getTester} from './utils/test.js';

const {test} = getTester(import.meta);

test.snapshot({
	valid: [
		'{}',
		'"not an object"',
		'{"dependencies": {"foo": "^1.0.0"}}',
		'{"dependencies": {"foo": "^1.0.0"}, "overrides": {"bar": "^2.0.0"}}',
		'{"dependencies": {"foo": "^1.0.0"}, "overrides": {"foo": "^1.0.0"}}',
		'{"dependencies": {"foo": "^1.0.0"}, "overrides": {"foo": {".": "^1.0.0", "bar": "^2.0.0"}}}',
		'{"dependencies": {"foo": "^1.0.0"}, "overrides": {"foo": "$foo"}}',
		'{"dependencies": {"foo": "^1.0.0"}, "overrides": {"foo": {".": "$foo"}}}',
		'{"dependencies": {"foo": "^1.0.0", "bar": "^1.0.0"}, "overrides": {"foo": "$bar"}}',
		'{"peerDependencies": {"foo": "^1"}, "dependencies": {"foo": "^2", "bar": "^4"}, "optionalDependencies": {"foo": "^3"}, "devDependencies": {"foo": "^4"}, "overrides": {"bar": "$foo"}}',
		'{"dependencies": {"foo": "^1.0.0"}, "overrides": {"foo": ""}}',
		'{"dependencies": {"foo": "^1.0.0"}, "overrides": {"foo": "*"}}',
		'{"dependencies": {"foo": "^1.0.0"}, "overrides": {"foo": {"bar": "^2.0.0"}}}',
		'{"dependencies": {"foo": "^1.0.0"}, "overrides": {"foo@^2.0.0": "^2.0.0"}}',
		'{"dependencies": {"foo": "^1.0.0"}, "overrides": {"foo@^1.0.0": "^1.0.0"}}',
		'{"dependencies": {"foo": "^1.2.3"}, "overrides": {"foo@^1.0.0": "^1.2.3", "foo@~1.2.0": "^2.0.0"}}',
		'{"dependencies":{"foo":"^1"},"overrides":{"foo":"*","foo@^1":"^2"}}',
		'{"dependencies":{"foo":"^1"},"overrides":{"foo":"^2","foo":"^1"}}',
		'{"dependencies":{"foo":"^1"},"overrides":{"foo":{".":"^2",".":"^1"}}}',
		'{"dependencies":{"foo":"^1"},"overrides":{"foo":"^2"},"overrides":{"foo":"^1"}}',
		'{"dependencies":{"foo":"^2"},"dependencies":{"foo":"^1"},"overrides":{"foo":"^1"}}',
		'{"dependencies":{"foo":"^1","foo":1},"overrides":{"foo":"^2"}}',
		'{"dependencies":{"Foo":"^1"},"devDependencies":{"foo":"^2"},"overrides":{"Foo":"^2"}}',
		'{"peerDependencies": {"foo": "^1.0.0"}, "dependencies": {"foo": "^2.0.0"}, "optionalDependencies": {"foo": "^3.0.0"}, "devDependencies": {"foo": "^4.0.0"}, "overrides": {"foo": "^4.0.0"}}',
		'{"dependencies":{"foo":"^1","bar":"$baz"},"overrides":{"foo":"$bar"}}',
		'{"devDependencies": {"foo": "^1.0.0"}, "overrides": {"foo": "^1.0.0"}}',
		'{"optionalDependencies": {"foo": "^1.0.0"}, "overrides": {"foo": "^1.0.0"}}',
		'{"peerDependencies": {"foo": "^1.0.0"}, "overrides": {"foo": "^1.0.0"}}',
		// Invalid fields are left to `valid-fields`.
		'{"dependencies": {"foo": 1}, "overrides": {"foo": "^2.0.0"}}',
		'{"dependencies": {"foo": "^1.0.0"}, "overrides": []}',
		'{"dependencies": {"foo": "^1.0.0"}, "overrides": {"foo": {".": 1}}}',
		// A non-object, non-string override value has no effective specifier to compare.
		'{"dependencies": {"foo": "^1.0.0"}, "overrides": {"foo": 123}}',
		// A `$`-reference to a dependency whose value is non-string cannot resolve, so nothing is reported.
		'{"dependencies": {"bar": "^1.0.0", "foo": 123}, "overrides": {"bar": "$foo"}}',
		// An override key npm's parser rejects is skipped rather than crashing the rule.
		'{"dependencies": {"foo": "^1.0.0"}, "overrides": {"@a/b@not a range": "1.0.0"}}',
		// An override key that resolves to no package name (a path) is not a package override.
		'{"overrides": {"./local-pkg": "^1.0.0"}}',
		// A direct dependency whose git range is unparseable cannot be intersected, so the override is left alone.
		'{"dependencies": {"foo": "git+https://github.com/foo/bar#semver:not-valid"}, "overrides": {"foo@^1.0.0": "^2.0.0"}}',
	],
	invalid: [
		'{"dependencies": {"foo": "^1.0.0"}, "overrides": {"foo": "^2.0.0"}}',
		'{"devDependencies": {"foo": "^1.0.0"}, "overrides": {"foo": "^2.0.0"}}',
		'{"optionalDependencies": {"foo": "^1.0.0"}, "overrides": {"foo": "^2.0.0"}}',
		'{"peerDependencies": {"foo": "^1.0.0"}, "overrides": {"foo": "^2.0.0"}}',
		'{"dependencies": {"foo": "^1.0.0", "bar": "^2.0.0"}, "overrides": {"foo": "$bar"}}',
		'{"dependencies": {"foo": "^1.0.0", "bar": "^2.0.0"}, "overrides": {"foo": {".": "$bar"}}}',
		'{"dependencies": {"@scope/foo": "^1.0.0"}, "overrides": {"@scope/foo": "^2.0.0"}}',
		'{"dependencies": {"foo": "^1.0.0"}, "overrides": {"foo": {".": "^2.0.0"}}}',
		'{"dependencies": {"foo": "^1.2.3"}, "overrides": {"foo@^1.0.0": {"bar": "^2.0.0"}}}',
		'{"dependencies": {"foo": "npm:bar@^1.0.0"}, "overrides": {"foo@^1.0.0": {"bar": "^2.0.0"}}}',
		'{"dependencies": {"@scope/foo": "^1.2.3"}, "overrides": {"@scope/foo@^1.0.0": {"bar": "^2.0.0"}}}',
		'{"dependencies": {"foo": "^1.0.0"}, "devDependencies": {"foo": "^2.0.0"}, "overrides": {"foo": "^1.0.0"}}',
		'{"dependencies": {"foo": "latest"}, "overrides": {"foo": "next"}}',
		'{"dependencies": {"foo": "latest"}, "overrides": {"foo@next": "beta"}}',
		'{"dependencies": {"foo": "git+https://github.com/user/repo.git#semver:^1.0.0"}, "overrides": {"foo@^1.0.0": "^2.0.0"}}',
		'{"dependencies": {"foo": "file:../foo"}, "overrides": {"foo@file:../bar": "file:../baz"}}',
		'{"dependencies": {"foo": "../foo"}, "overrides": {"foo@../bar": "../baz"}}',
		'{"dependencies": {"foo": "https://example.com/foo.tgz"}, "overrides": {"foo@https://example.com/bar.tgz": "https://example.com/baz.tgz"}}',
		'{"dependencies": {"foo": "^1.2.3"}, "overrides": {"foo@^1.0.0": "^2.0.0", "foo@~1.2.0": "^1.2.3"}}',
		'{"dependencies": {"foo": "^1.2.3"}, "overrides": {"foo@^1.0.0": {}}}',
		'{"dependencies":{"4294967295":"^1"},"overrides":{"4294967295@^1":"^2","4294967295":"*"}}',
		'{"dependencies":{"foo":"^1.2.3"},"overrides":{"foo@^1.0.0":{"bar":"^2.0.0"}}}',
		'{\n\t"dependencies": {\n\t\t"foo": "^1.2.3"\n\t},\n\t"overrides": {\n\t\t"foo@^1.0.0": {\n\t\t\t"bar": "^2.0.0"\n\t\t}\n\t}\n}',
		'{\n\t"dependencies": {\n\t\t"foo": "^1.2.3"\n\t},\n\t"overrides": {\n\t\t"foo@^1.0.0": {\n\t\t}\n\t}\n}',
		'{"dependencies":{"foo":"^1","bar":"^2"},"devDependencies":{"bar":""},"overrides":{"foo":"$bar"}}',
		'{"dependencies":{"Foo":"^1"},"devDependencies":{"foo":"^2"},"overrides":{"foo":"^1"}}',
		// Npm refuses to install at all with `Unable to resolve reference $x`, so an unresolvable
		// reference is a hard failure of its own.
		'{\n\t"name": "root",\n\t"version": "1.0.0",\n\t"dependencies": {"foo": "^1.0.0"},\n\t"overrides": {"foo": "$missing"}\n}',
		// Npm refuses to install at all with `Unable to resolve reference $x` when the referenced name is in
		// no group, so this is a hard failure of its own rather than a conflict.
		'{\n\t"dependencies": {\n\t\t"foo": "^1.0.0"\n\t},\n\t"overrides": {\n\t\t"foo": "$bar"\n\t}\n}',
		// Npm only takes a non-empty referenced specifier, so a name whose every entry is empty fails with `Unable to resolve reference $x` too.
		'{"dependencies":{"foo":"^1","bar":""},"overrides":{"foo":"$bar"}}',
	],
});
